<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#efefef"
    app:cardCornerRadius="4dp"
    app:cardElevation="6dp"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/white"
            android:text="@string/delete"
            />

        <ImageView
            android:id="@+id/ivItemLogo"
            android:layout_width="102dp"
            android:layout_height="106dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.473"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="176dp"
            android:layout_height="53dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/title"
            android:textColor="@color/black"
            android:textColorHint="#020202"
            app:layout_constraintStart_toEndOf="@+id/ivItemLogo"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="176dp"
            android:layout_height="53dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/author"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#020202"
            card_view:layout_constraintStart_toEndOf="@+id/ivItemLogo"
            card_view:layout_constraintTop_toBottomOf="@+id/tvTitle" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>